--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    background-color: #ffffff; /* Plain white */
-    color: #111; /* Strong readable text */
+    background-color: #f2f2f2; /* Light gray background */
+    color: #111;
 }
+
 
 /* Header Section */
 header {
